--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="index.css" />
-    <script defer src="src/index.js"></script>
+
     <title>Lab Liker!</title>
   </head>
   <body id="background">
@@ -12,11 +12,22 @@
       <h1 id="Title">&#128021;Lab Liker!&#128021;</h1>
     </div>
     <div id="container">
-      <form id="rating-form">
-        <input type="text" for="rating" id="new-rating" placeholder="Rating" />
-        <input type="submit" value="Submit!" />
+      <form id="add-likes">
+        <input
+          type="text"
+          placeholder="likes #"
+          id="more-likes"
+          name="more-likes"
+        />
+        <input type="submit" value="Like!" />
       </form>
-      <div id="picture-container">Picture goes here</div>
+      <div id="like-counter">
+        <p id="like-value"></p>
+      </div>
+      <div id="doggo-img"></div>
+      <div id="next-doggo-container">
+        <button id="next-dog">Next Lab!</button>
+      </div>
       <div id="form-container">
         <form id="submit-dog">
           <input
@@ -29,5 +40,6 @@
         </form>
       </div>
     </div>
+    <script defer src="src/index.js"></script>
   </body>
 </html>
