All functionality working

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
       <h1 id="Title">&#128021;Lab Liker!&#128021;</h1>
     </div>
     <div id="container">
-      <form id="add-likes">
+      <form id="add-rating">
         <input
           type="text"
-          placeholder="likes #"
+          placeholder="Rating 0/10"
           id="more-likes"
           name="more-likes"
+          maxlength="10"
         />
-        <input type="submit" value="Like!" />
+        <input type="submit" value="Rate!" />
       </form>
       <div id="like-counter">
         <p id="like-value"></p>
       </div>
-      <div id="doggo-img"></div>
+      <div id="doggo-img-container"></div>
       <div id="next-doggo-container">
         <button id="next-dog">Next Lab!</button>
       </div>
