--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <input type="submit" value="Rate!" />
       </form>
       <div id="like-counter">
-        <p id="like-value"></p>
+        <p id="like-value">/10</p>
       </div>
       <div id="doggo-img-container"></div>
-      <div id="next-doggo-container">
+      <div id="doggo-button-container">
         <button class="input" id="favorite-button">Favorite &#x2665;</button>
         <button class="input" id="next-dog">Next Lab!</button>
       </div>
